ports-wip/telegram-cli/README
Stuck at compilation issue:

kalou@79ad8b54099b:~/ports-wip/telegram-cli$ ./build.sh
lua5.2 is /usr/bin/lua5.2
Building
/usr/bin/gcc -I. -I. -I./tgl -I/usr/include -I/usr/include/i386-linux-gnu/  -I/usr/local/include -I/berrymuch/archive/openssl-1.0.2t//accounts/1000/shared/documents/clitools/include -DHAVE_CONFIG_H -Wall -Wextra -Wno-missing-field-initializers -Wno-deprecated-declarations -fno-strict-aliasing -fno-omit-frame-pointer -ggdb -Wno-unused-parameter -fPIC -Wno-unused-function -Wno-builtin-memcpy-chk-size -iquote ./tgl/tl-parser -c -MP -MD -MF dep/tl-parser.d -MQ objs/tl-parser.o -o objs/tl-parser.o tgl/tl-parser/tl-parser.c
In file included from /usr/include/stdlib.h:42:0,
                 from tgl/tl-parser/tl-parser.c:33:
/usr/include/i386-linux-gnu/bits/waitstatus.h:79:15: error: duplicate member '__w_retcode'
  unsigned int __w_retcode:8;
               ^
/usr/include/i386-linux-gnu/bits/waitstatus.h:80:15: error: duplicate member '__w_coredump'
  unsigned int __w_coredump:1;
               ^
/usr/include/i386-linux-gnu/bits/waitstatus.h:81:15: error: duplicate member '__w_termsig'
  unsigned int __w_termsig:7;
               ^
/usr/include/i386-linux-gnu/bits/waitstatus.h:93:15: error: duplicate member '__w_stopsig'
  unsigned int __w_stopsig:8; /* Stopping signal.  */
               ^
/usr/include/i386-linux-gnu/bits/waitstatus.h:94:15: error: duplicate member '__w_stopval'
  unsigned int __w_stopval:8; /* W_STOPPED if stopped.  */
               ^
tgl/tl-parser/tl-parser.c: In function 'wint':
tgl/tl-parser/tl-parser.c:2729:7: warning: implicit declaration of function 'htole32' [-Wimplicit-function-declaration]
   a = htole32 (a);
       ^
tgl/tl-parser/tl-parser.c: In function 'wll':
tgl/tl-parser/tl-parser.c:2763:7: warning: implicit declaration of function 'htole64' [-Wimplicit-function-declaration]
   a = htole64 (a);
       ^
tgl/tl-parser/tl-parser.c: At top level:
cc1: warning: unrecognized command line option '-Wno-builtin-memcpy-chk-size'
Makefile.tl-parser:4: recipe for target 'objs/tl-parser.o' failed
make: *** [objs/tl-parser.o] Error 1
